2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b82

 * Change: New Gallery 1 footer image (ripped from G2 and changed *g*)

 * Change: New donate footer image (just ripped from G2)

 * Fix: Invented ignorelist for "unreal" options attributs.

2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b81

 * New: In manage user a nice tooltip with helpful information
        appears when you hover a username from the list.

   Thanks to Peter Schumacher for this idea.

 * Fix: Minore CSS fix for disabled buttons.

 * Change: Modify drawselect2 to accept attribs per option.
 
2007-06-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b80

 * Change: New icon for navigation up.

 Thanks to Peter Schumacher!

 * Change remove unused icons.

2007-06-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b79

 * Fix: rearrange works now with empty subalbums.

   Puuh, lots of work. But thanks to Andy, sorry no YUI.

 * Change: Code cleanup for getHighlightTag()

 * Fix: Password fields were broken.

 * Change: "show" a photo is now called "unhide".

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b78

 All about setup:

 - Text changes / typos.
 - Disable next/prev button if last/first tab is reached.

 Thanks to Andy.

 - removed function newIn()

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b77

 * Change: Little layout fix for siriux frame.

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b76

 * New: Goto # selectbox in photo navigation.

2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b75

 * Change: Dont show icons below thumbs for ecards etc.
   Note: Code is still there, just needs to be uncomment.

 * Fix: Even if returnTo link is off, there should be a link 
	    back up to the album.
   
   Thanks to Peter Schumacher.

 * Change: Make Popups from photoview a little bigger.
  
2007-06-20 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b74

 * Change: Use of navigation via arrow keys in photo view.

 * Fix: Remove some debug code.

2007-06-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b73
